--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -11,6 +11,8 @@
         "activatorShowHidden": "Show Hidden",
         "activatorUnfavoriteAction": "Unfavourite",
         "activatorUnhideAction": "Unhide",
+        "add": "Add",
+        "add9": "Add",
         "addColorBoardEffect": "Add Color Board Effect",
         "addColorCurvesEffect": "Add Color Curves Effect",
         "addColorWheelsEffect": "Add Color Wheels Effect",
@@ -33,6 +35,8 @@
         "all": "All",
         "allowZoomingWithModifierKey": "Enable Timeline Zooming with Mouse Scroll & Modifier Key",
         "allVisibleColumns": "All Visible Columns",
+        "alphaAdd": "Alpha Add",
+        "alphaAdd9": "Alpha Add",
         "alreadyWatched": "This folder is already being watched.",
         "always": "Always",
         "alwaysOnTop": "Always On Top",
@@ -82,6 +86,8 @@
         "batchExportNotShowing": "Unable to show the Export Dialog",
         "batchExportProxyFilesDetected": "Proxy files were detected, which has aborted the Batch Export.\n\nProxy files can be ignored via the Batch Export Preferences if required.",
         "batchExportUnexpectedAlert": "Unexpected alert while opening the Export dialog.",
+        "behind": "Behind",
+        "behind9": "Behind",
         "betterPerformance": "Better Performance",
         "betterQuality": "Better Quality",
         "black": "Black",
@@ -146,6 +152,10 @@
         "colorBoardShowColor": "Color Board: Show Color",
         "colorBoardShowExposure": "Color Board: Show Exposure",
         "colorBoardShowSaturation": "Color Board: Show Saturation",
+        "colorBurn": "Color Burn",
+        "colorBurn9": "ColorBurn",
+        "colorDodge": "Color Dodge",
+        "colorDodge9": "ColorDodg",
         "colorfinale_tangent_label": "Tangent: ColorFinale",
         "colorShortcuts": "Color Shortcuts",
         "colorWheel": "Color Wheel",
@@ -435,6 +445,8 @@
         "customiseShortcuts": "Customise Shortcuts",
         "customPrefixError": "This prefix looks invalid. Please try again.",
         "customTouchBar": "Custom Touch Bar",
+        "darken": "Darken",
+        "darken9": "Darken",
         "delete": "Delete",
         "deleteAfterImport": "Delete file from Watch Folder (%{numberOfSeconds} %{seconds} after Import)",
         "deleteFileAfterImport": "Delete Generated File After Import",
@@ -445,6 +457,8 @@
         "developerGuide": "Developer Guide",
         "device": "Device",
         "diamond": "Diamond",
+        "difference": "Difference",
+        "difference9": "Diff",
         "disabled": "Disabled",
         "display": "Display",
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
@@ -498,6 +512,8 @@
         "enterFinderTagError": "This Finder Tag looks invalid.\n\nPlease try again.",
         "errorLog": "Error Log",
         "exactMatch": "Exact Match",
+        "exclusion": "Exclusion",
+        "exclusion9": "Exclusion",
         "expandAudio": "Expand Audio",
         "exposure": "Exposure",
         "extendEdit": "Extend Edit",
@@ -729,6 +745,10 @@
         "grouped": "Grouped",
         "guide": "Guide",
         "guides": "Guides",
+        "hardLight": "Hard Light",
+        "hardLight9": "HardLight",
+        "hardMix": "Hard Mix",
+        "hardMix9": "HardMix",
         "helpAndSupport": "Help & Support",
         "helpandsupport_group": "Help & Support",
         "highlightedItem": "Highlighted Item",
@@ -805,6 +825,14 @@
         "leftVertical": "Left Vertical",
         "letterbox": "Letterbox",
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
+        "lighten": "Lighten",
+        "lighten9": "Lighten",
+        "linearBurn": "Linear Burn",
+        "linearBurn9": "LinBurn",
+        "linearDodge": "Linear Dodge",
+        "linearDodge9": "LinDodg",
+        "linearLight": "Linear Light",
+        "linearLight9": "LinLight",
         "listenMMC": "Listen to MMC Input",
         "listenMTC": "Listen to MTC Input",
         "loadFromPasteboard": "Load from Pasteboard",
@@ -864,6 +892,8 @@
         "mountingExternalDrivesMsg": "Mounting external drives...",
         "mouseLocation": "Centre of Mouse Location",
         "moveableMarkers": "Moveable Markers",
+        "multiply": "Multiply",
+        "multiply9": "Multiply",
         "mustInstallTangentMapper": "You must install the Tangent Mapper & Hub to enable Tangent Panel support.",
         "mute": "Mute",
         "mute10": "Mute",
@@ -887,6 +917,7 @@
         "noPluginFound": "Unable to find a ${plugin} called '${name}'.",
         "noPluginShortcut": "There is no ${plugin} assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
         "normal": "Normal",
+        "normal9": "Normal",
         "noteCC": "Note/CC",
         "noteOff": "Note Off",
         "noteOn": "Note On",
@@ -925,6 +956,8 @@
         "originalOptimised": "Original/Optimised",
         "outroText": "You can access CommandPost via the satellite icon<br />in your system’s menubar at the top right corner of the screen.",
         "outroTitle": "CommandPost is now setup and ready to go!",
+        "overlay": "Overlay",
+        "overlay9": "Overlay",
         "overlays": "Overlays",
         "overrideClipNamePrompt": "Please enter a label for the pasteboard item:",
         "overrideFolderNamePrompt": "Please enter a folder for the pasteboard item:",
@@ -945,6 +978,8 @@
         "performBatchExport": "Perform Batch Export",
         "physical": "Physical",
         "pickAFrameIOCSVFile": "Please pick a Frame.io CSV File",
+        "pinLight": "Pin Light",
+        "pinLight9": "PinLight",
         "pitchWheelChange": "Pitch Wheel Change",
         "play": "Play",
         "playAfterFind": "Play After Find",
@@ -995,6 +1030,8 @@
         "polyphonicKeyPressure": "Polyphonic Key Pressure",
         "preferences": "Preferences",
         "prefix": "Prefix",
+        "premultipliedMix": "Premultiplied Mix",
+        "premultipliedMix9": "Premulti",
         "previous": "Previous",
         "privacy": "Privacy",
         "problemProcessingCSV": "There was a problem processing the CSV file. Are you sure it's valid?",
@@ -1061,6 +1098,8 @@
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro for Plugins & Motion Templates.",
         "scanFinalCutProSetupTwo": "Depending on how many plugins and effects you have installed, this can take several minutes.",
         "scanningInProgress": "Scanning in progress",
+        "screen": "Screen",
+        "screen9": "Screen",
         "scripting": "Scripting",
         "scriptingTools": "Scripting Tools",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
@@ -1151,16 +1190,28 @@
         "showTimelineInViewers": "Show Timeline in Viewers",
         "showTitles": "Show Titles",
         "showTransitions": "Show Transitions",
+        "silhouetteAlpha": "Silhouette Alpha",
+        "silhouetteAlpha9": "Sil Alpha",
+        "silhouetteLuma": "Silhouette Luma",
+        "silhouetteLuma9": "Sil Luma",
         "six": "6",
         "skip": "Skip",
+        "softLight": "Soft Light",
+        "softLight9": "SoftLight",
         "sound": "Sound",
         "spacing": "Spacing",
         "stabilizationMethod": "Stabilization Method",
         "start": "Start",
         "startScan": "Start Scan",
+        "stencilAlpha": "Stencil Alpha",
+        "stencilAlpha9": "Stencil A",
+        "stencilLuma": "Stencil Luma",
+        "stencilLuma9": "Stencil L",
         "stillFrames": "Still Frames",
         "stills": "Stills",
         "stop": "Stop",
+        "subtract": "Subtract",
+        "subtract9": "Subtract",
         "success": "Success",
         "suggestATranslation": "Suggest A New Language",
         "suggestCompressorFeatureToApple": "Suggest Compressor Feature to Apple",
@@ -1267,6 +1318,8 @@
         "virtualTouchBar": "Virtual Touch Bar",
         "visibility": "Visibility",
         "visitTangentWebsite": "Visit Tangent Website",
+        "vividLight": "Vivid Light",
+        "vividLight9": "VivLight",
         "volume": "Volume",
         "volume10": "Volume",
         "volume9": "Volume",
