--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -103,6 +103,8 @@
         "brightness9": "Brightnss",
         "browser": "Browser",
         "browser_group": "Browser",
+        "browserDuration": "Browser Duration",
+        "browserDuration9": "BDuration",
         "browserDurationSlider": "Browser Duration Slider",
         "browserDurationSliderDescription": "Allows you to control the Browser Duration.",
         "browserHeightSlider": "Browser Height Slider",
@@ -471,6 +473,7 @@
         "draggable": "Draggable",
         "draggableGuides": "Draggable Guides",
         "driveManagement": "Drive Management",
+        "duration": "Duration",
         "edit": "Edit",
         "eight": "8",
         "emailAddress": "Email Address",
@@ -749,6 +752,7 @@
         "hardLight9": "HardLight",
         "hardMix": "Hard Mix",
         "hardMix9": "HardMix",
+        "height": "Height",
         "helpAndSupport": "Help & Support",
         "helpandsupport_group": "Help & Support",
         "highlightedItem": "Highlighted Item",
