--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -171,6 +171,7 @@
         "commandPost_group": "CommandPost",
         "commandPostLanguage": "CommandPost Language",
         "commandType": "Type",
+        "type": "Type",
         "commonErrorMessageEnd": "Would you like to submit a bug report?",
         "commonErrorMessageStart": "The following error has occurred:",
         "components": "Components",
@@ -1245,9 +1246,21 @@
         "timeline_group": "Timeline",
         "timelineHistory": "Timeline History",
         "timelineZoom": "Timeline Zoom",
-        "timelineZoom9": "Zoom",
+        "clipWaveformHeight": "Clip Waveform Height",
+        "clipWaveformHeight9": "WaveformH",
+        "toggle": "Toggle",
+        "automatic": "Automatic",
+        "inertiaCam": "InertiaCam",
+        "method": "Method",
+        "smoothCam": "SmoothCam",
+        "clipNames": "Clip Names",
+        "angles": "Angles",
+        "clipRoles": "Clip Roles",
+        "laneHeaders": "Lane Headers",
+        "zoom": "Zoom",
         "tint": "Tint",
         "tint4": "Tint",
+        "viewOptions": "View Options",
         "tip": "Tip",
         "title": "Title",
         "title_group": "Title",
@@ -1281,6 +1294,8 @@
         "transmitMTC": "Transmit MTC",
         "trashPreferences": "Trash Preferences",
         "trim": "Trim",
+        "crop": "Crop",
+        "kenBurns": "Ken Burns",
         "trimToPlayhead": "Trim To Playhead",
         "two": "2",
         "typeDateAndTime_title": "Type Date & Time",
@@ -1308,6 +1323,7 @@
         "vertical4": "Vert",
         "video": "Video",
         "videoEffect_group": "Video Effect",
+        "clipHeight": "Clip Height",
         "videoWaveform": "Video Waveform",
         "view": "View",
         "viewAllColorChannels": "View All Color Channels",
