--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -40,8 +40,10 @@
         "alreadyWatched": "This folder is already being watched.",
         "always": "Always",
         "alwaysOnTop": "Always On Top",
+        "amount": "Amount",
         "angle": "Angle",
         "angle3": "ANG",
+        "angles": "Angles",
         "apiKeysValidated": "Your API keys you entered have been successfully validated.",
         "appearance": "Appearance",
         "apple": "Apple",
@@ -63,6 +65,7 @@
         "attachScreenshot": "Attach a screenshot of all of your screens, taken just before this feedback form appeared.",
         "audio": "Audio",
         "audioEffect_group": "Audio Effect",
+        "automatic": "Automatic",
         "automaticallyImport": "Automatically Import without Notification",
         "autoMountOnAC": "Mount external drives when switching to AC power",
         "autoUnmountOnBattery": "Unmount external drives when switching to battery power",
@@ -94,7 +97,9 @@
         "blade": "Blade",
         "blendMode": "Blend Mode",
         "blendMode9": "BlendMode",
+        "blendModes": "Blend Modes",
         "blue": "Blue",
+        "board": "Board",
         "bottomHorizontal": "Bottom Horizontal",
         "breakApartClipItems": "Break Apart Clip Items",
         "brightness": "Brightness",
@@ -139,6 +144,11 @@
         "clearSharedPasteboard": "Clear Shared Pasteboard",
         "cliInstallError": "I'm sorry, but we failed to Install the Command Line Tool. Please try again.",
         "clip": "Clip",
+        "clipHeight": "Clip Height",
+        "clipNames": "Clip Names",
+        "clipRoles": "Clip Roles",
+        "clipWaveformHeight": "Clip Waveform Height",
+        "clipWaveformHeight9": "WaveformH",
         "cliUninstallError": "I'm sorry, but we failed to Uninstall the Command Line Tool. Please try again.",
         "close": "Close",
         "cmdDoesNotExistError": "No command with the ID of %{id} could be found.",
@@ -171,7 +181,6 @@
         "commandPost_group": "CommandPost",
         "commandPostLanguage": "CommandPost Language",
         "commandType": "Type",
-        "type": "Type",
         "commonErrorMessageEnd": "Would you like to submit a bug report?",
         "commonErrorMessageStart": "The following error has occurred:",
         "components": "Components",
@@ -440,6 +449,8 @@
         "createProxyMedia": "Create Proxy Media",
         "createRoleForVoice": "Assign Voice Role",
         "credits": "Credits",
+        "crop": "Crop",
+        "cropTypes": "Crop Types",
         "crossHair": "Cross Hair",
         "currentIncrementalNumber": "Incremental Number",
         "custom": "Custom",
@@ -521,6 +532,7 @@
         "expandAudio": "Expand Audio",
         "exposure": "Exposure",
         "extendEdit": "Extend Edit",
+        "extraHigh": "Extra High",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
         "favourite": "Favourite",
         "favourites": "Favourites",
@@ -568,6 +580,7 @@
         "feedbackError": "The following error occurred trying to communicate with the CommandPost servers:\n\n%{message}\n\nUnfortunately your feedback was not submitted.\n\nPlease try again.",
         "feedbackSuccess": "Your feedback was submitted successfully.\n\nThank you!",
         "fileCouldNotBeRead": "The selected file could not be read.",
+        "fill": "Fill",
         "filterBrowserBeforeSearch": "Filter Browser Before Search",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
@@ -652,11 +665,14 @@
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
+        "finalcutpro_tangent_browser_label": "Tangent: Browser Controls",
         "finalcutpro_tangent_clip_label": "Tangent: Final Cut Pro Clip Controls",
         "finalcutpro_tangent_color_label": "Tangent: Final Cut Pro Color Inspector Controls",
+        "finalcutpro_tangent_common_label": "Tangent: Common Utilities",
         "finalcutpro_tangent_edit_label": "Tangent: Final Cut Pro Edit Controls",
         "finalcutpro_tangent_group_label": "Tangent: Final Cut Pro Support",
         "finalcutpro_tangent_manager_label": "Manager: Tangent",
+        "finalcutpro_tangent_modes_label": "Tangent: Modes",
         "finalcutpro_tangent_new_label": "Tangent: Final Cut Pro New Controls",
         "finalcutpro_tangent_open_label": "Tangent: Open Final Cut Pro",
         "finalcutpro_tangent_overlay_label": "Tangent: Viewer Overlay",
@@ -716,6 +732,7 @@
         "finder_window_label": "Window Management",
         "findNext": "Find Next",
         "findPrevious": "Find Previous",
+        "fit": "Fit",
         "five": "5",
         "folder": "Folder",
         "forward": "Forward",
@@ -756,6 +773,7 @@
         "height": "Height",
         "helpAndSupport": "Help & Support",
         "helpandsupport_group": "Help & Support",
+        "high": "High",
         "highlightedItem": "Highlighted Item",
         "highlightPlayhead": "Highlight Playhead",
         "highlightPlayheadColour": "Colour",
@@ -790,6 +808,8 @@
         "includeContactInfo": "Include contact info",
         "includeTextInFilename": "Include Entered Text in Filename",
         "incomingFile": "Incoming File...",
+        "individualEffects": "Individual Effects",
+        "inertiaCam": "InertiaCam",
         "info": "Info",
         "insertIntoTimeline": "Insert into Timeline",
         "inspector": "Inspector",
@@ -810,6 +830,7 @@
         "justifyLastCentre_title": "Justify last centre",
         "justifyLastLeft_title": "Justify last left",
         "justifyLastRight_title": "Justify last right",
+        "kenBurns": "Ken Burns",
         "key": "Key",
         "keyboardShortcuts": "Keyboard Shortcuts",
         "keyframe": "Keyframe",
@@ -818,6 +839,7 @@
         "keywordPresetsRestored": "Your Keywords have been restored to Preset",
         "keywordPresetsSaved": "Your Keywords have been saved to Preset",
         "label": "Label",
+        "laneHeaders": "Lane Headers",
         "language": "Language",
         "languageHeading": "Language",
         "launch": "Launch",
@@ -846,6 +868,7 @@
         "location": "Location",
         "loopPlayback": "Loop Playback",
         "loopSearch": "Loop Search",
+        "low": "Low",
         "macOS": "macOS",
         "marker": "Marker",
         "master": "Master",
@@ -858,11 +881,13 @@
         "media": "Media",
         "mediaImport": "Media Import",
         "mediaImport_group": "Media Import",
+        "medium": "Medium",
         "memory": "Memory",
         "menubarHeading": "Menubar",
         "menubarPanelLabel": "Menubar",
         "menubarPanelTooltip": "Menubar Preferences",
         "menuChoiceSubText": "Menu: %{path}",
+        "method": "Method",
         "midi": "MIDI",
         "midiBankDescription": "Changes the MIDI Control Bank",
         "midiColorBoardDescription": "Controls the Color Board via MIDI Controls",
@@ -1201,6 +1226,7 @@
         "silhouetteLuma9": "Sil Luma",
         "six": "6",
         "skip": "Skip",
+        "smoothCam": "SmoothCam",
         "softLight": "Soft Light",
         "softLight9": "SoftLight",
         "sound": "Sound",
@@ -1246,24 +1272,12 @@
         "timeline_group": "Timeline",
         "timelineHistory": "Timeline History",
         "timelineZoom": "Timeline Zoom",
-        "clipWaveformHeight": "Clip Waveform Height",
-        "clipWaveformHeight9": "WaveformH",
-        "toggle": "Toggle",
-        "automatic": "Automatic",
-        "inertiaCam": "InertiaCam",
-        "method": "Method",
-        "smoothCam": "SmoothCam",
-        "clipNames": "Clip Names",
-        "angles": "Angles",
-        "clipRoles": "Clip Roles",
-        "laneHeaders": "Lane Headers",
-        "zoom": "Zoom",
         "tint": "Tint",
         "tint4": "Tint",
-        "viewOptions": "View Options",
         "tip": "Tip",
         "title": "Title",
         "title_group": "Title",
+        "toggle": "Toggle",
         "toggleAutomaticScriptReloading": "Auto Reload",
         "toggleColorCorrectionEffects": "Toggle Color Correction Effects",
         "toggleEffects": "Toggle Effects",
@@ -1294,10 +1308,9 @@
         "transmitMTC": "Transmit MTC",
         "trashPreferences": "Trash Preferences",
         "trim": "Trim",
-        "crop": "Crop",
-        "kenBurns": "Ken Burns",
         "trimToPlayhead": "Trim To Playhead",
         "two": "2",
+        "type": "Type",
         "typeDateAndTime_title": "Type Date & Time",
         "unassigned": "Unassigned",
         "undo": "Undo",
@@ -1323,7 +1336,6 @@
         "vertical4": "Vert",
         "video": "Video",
         "videoEffect_group": "Video Effect",
-        "clipHeight": "Clip Height",
         "videoWaveform": "Video Waveform",
         "view": "View",
         "viewAllColorChannels": "View All Color Channels",
@@ -1332,6 +1344,7 @@
         "viewer": "Viewer",
         "viewerOverlay": "Viewer Overlay",
         "viewGreenColorChannel": "View Green Color Channel",
+        "viewOptions": "View Options",
         "viewRedColorChannel": "View Red Color Channel",
         "viewStillsMemory": "View Stills Memory",
         "virtual": "Virtual",
@@ -1355,12 +1368,14 @@
         "whatFeatures": "What feature would you like to see implemented or improved?",
         "whatStepsToRecreate": "What are the steps to recreate the problem?",
         "whatWentWrong": "What went wrong?",
+        "wheels": "Wheels",
         "white": "White",
         "wholeWords": "Whole Words",
         "windowManagement": "Window Management",
         "xml": "XML",
         "yellow": "Yellow",
         "yes": "Yes",
+        "zoom": "Zoom",
         "zoomSlider": "Zoom Slider",
         "zoomSliderDescription": "Allows you to control timeline zoom.",
         "zoomToFit": "Zoom to Fit",
