--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -40,6 +40,8 @@
         "alreadyWatched": "This folder is already being watched.",
         "always": "Always",
         "alwaysOnTop": "Always On Top",
+        "ambience": "Ambience",
+        "ambience9": "Ambience",
         "amount": "Amount",
         "angle": "Angle",
         "angle3": "ANG",
@@ -64,6 +66,7 @@
         "attachLog": "Attach the entire contents of the CommandPost Error Log.",
         "attachScreenshot": "Attach a screenshot of all of your screens, taken just before this feedback form appeared.",
         "audio": "Audio",
+        "audioAnalysis": "Audio Analysis",
         "audioEffect_group": "Audio Effect",
         "automatic": "Automatic",
         "automaticallyImport": "Automatically Import without Notification",
@@ -71,11 +74,19 @@
         "autoUnmountOnBattery": "Unmount external drives when switching to battery power",
         "back": "Back",
         "backgroundRender": "Background Render",
+        "backToFront": "Back to Front",
+        "backToFront9": "Bak2Front",
         "backupInterval": "Backup Interval",
         "backupMinimumDuration": "Backup Minimum Duration",
         "badTouchBarIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Touch Bar icons.",
         "bank": "Bank",
         "basicGrid": "Basic Grid",
+        "basicSurround": "Basic Surround",
+        "basicSurround9": "Surround",
+        "bassBoost": "Bass Boost",
+        "bassBoost9": "Bass +",
+        "bassReduce": "Bass Reduce",
+        "bassReduce9": "Bass -",
         "batchExport": "Batch Export",
         "batchExportActiveTimeline": "Batch Export Active Timeline",
         "batchExportComplete": "Batch Export is now complete.\n\nThe selected clips/projects have been added to your Final Cut Pro or Compressor render queue.",
@@ -133,6 +144,7 @@
         "channelPressure": "Channel Pressure",
         "checkForUpdates": "Check for Updates",
         "circle": "Circle",
+        "circle9": "Circle",
         "clear": "Clear",
         "clearHistory": "Clear History",
         "clearingFinalCutProCacheRestart": "Clearing the Final Cut Pro Plugins caches requires CommandPost to Restart",
@@ -448,6 +460,8 @@
         "createOptimizedMedia": "Create Optimized Media",
         "createProxyMedia": "Create Proxy Media",
         "createRoleForVoice": "Assign Voice Role",
+        "createSpace": "Create Space",
+        "createSpace9": "C Space",
         "credits": "Credits",
         "crop": "Crop",
         "cropTypes": "Crop Types",
@@ -470,6 +484,8 @@
         "developer": "Developer Tools",
         "developerGuide": "Developer Guide",
         "device": "Device",
+        "dialogue": "Dialogue",
+        "dialogue9": "Dialogue",
         "diamond": "Diamond",
         "difference": "Difference",
         "difference9": "Diff",
@@ -487,6 +503,7 @@
         "driveManagement": "Drive Management",
         "duration": "Duration",
         "edit": "Edit",
+        "effects": "Effects",
         "eight": "8",
         "emailAddress": "Email Address",
         "emailResponse": "If you want an email response you will need to enter your email address:",
@@ -525,6 +542,7 @@
         "enterCustomFilenameError": "This filename looks invalid. Please try again.",
         "enterFinderTag": "Please enter the Finder Tag you want to use:",
         "enterFinderTagError": "This Finder Tag looks invalid.\n\nPlease try again.",
+        "equalization": "Equalization",
         "errorLog": "Error Log",
         "exactMatch": "Exact Match",
         "exclusion": "Exclusion",
@@ -579,6 +597,7 @@
         "feedback": "Feedback",
         "feedbackError": "The following error occurred trying to communicate with the CommandPost servers:\n\n%{message}\n\nUnfortunately your feedback was not submitted.\n\nPlease try again.",
         "feedbackSuccess": "Your feedback was submitted successfully.\n\nThank you!",
+        "fiftyHz": "50Hz",
         "fileCouldNotBeRead": "The selected file could not be read.",
         "fill": "Fill",
         "filterBrowserBeforeSearch": "Filter Browser Before Search",
@@ -734,6 +753,8 @@
         "findPrevious": "Find Previous",
         "fit": "Fit",
         "five": "5",
+        "flat": "Flat",
+        "flat9": "Flat",
         "folder": "Folder",
         "forward": "Forward",
         "four": "4",
@@ -793,6 +814,9 @@
         "hudOptions": "HUD Options",
         "hue": "Hue",
         "hue4": "Hue",
+        "humReduction": "Hum Reduction",
+        "humReduction9": "Hum -",
+        "humRemoval": "Hum Removal",
         "icon": "Icon",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
@@ -849,6 +873,8 @@
         "learn": "Learn",
         "leaveFilesInPlaceOnImport": "Leave Files In Place On Import",
         "left": "Left",
+        "leftSurroundToRightFront": "Left Surround to Right Front",
+        "leftSurroundToRightFront9": "Left2Rght",
         "leftVertical": "Left Vertical",
         "letterbox": "Letterbox",
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
@@ -868,12 +894,16 @@
         "location": "Location",
         "loopPlayback": "Loop Playback",
         "loopSearch": "Loop Search",
+        "loudness": "Loudness",
+        "loudness9": "Loudness",
         "low": "Low",
         "macOS": "macOS",
+        "magicButton": "Magic Button",
         "marker": "Marker",
         "master": "Master",
         "master2": "MS",
         "master4": "Mstr",
+        "match": "Match",
         "matchCase": "Match Case",
         "matchColor": "Match Color",
         "matchWords": "Match Words",
@@ -924,6 +954,10 @@
         "moveableMarkers": "Moveable Markers",
         "multiply": "Multiply",
         "multiply9": "Multiply",
+        "music": "Music",
+        "music9": "Music",
+        "musicEnhance": "Music Enhance",
+        "musicEnhance9": "Music Enh",
         "mustInstallTangentMapper": "You must install the Tangent Mapper & Hub to enable Tangent Panel support.",
         "mute": "Mute",
         "mute10": "Mute",
@@ -940,6 +974,7 @@
         "noDevicesDetected": "No Devices Detected",
         "noFCPUIElementDetected": "No existing Final Cut Pro User Interface Element Registered",
         "noGeneratorShortcut": "There is no Generator assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
+        "noiseRemoval": "Noise Removal",
         "noKeywordPresetsError": "It doesn't look like you've saved anything to this keyword preset yet?",
         "noMatchesFound": "No matches found.",
         "noMatchesFoundDescription": "We couldn't find any matches for the string you searched for. Please make sure all the rows you want to search are visible in the browser.",
@@ -992,6 +1027,7 @@
         "overrideClipNamePrompt": "Please enter a label for the pasteboard item:",
         "overrideFolderNamePrompt": "Please enter a folder for the pasteboard item:",
         "overrideValueInvalid": "The value you entered is not valid.\n\nPlease try again.",
+        "pan": "Pan",
         "pasteboard": "Pasteboard",
         "pasteboardBuffer": "Pasteboard Buffer",
         "pasteboardEditor": "Pasteboard Editor",
@@ -1115,7 +1151,12 @@
         "reverse": "Reverse",
         "right": "Right",
         "rightClickToAssignAction": "You can right click on this button to assign an action to it.",
+        "rightSurroundToLeftFront": "Right Surround to Left Front",
+        "rightSurroundToLeftFront9": "Rght2Left",
         "rightVertical": "Right Vertical",
+        "rollingShutter": "Rolling Shutter",
+        "rotate": "Rotate",
+        "rotate9": "Rotate",
         "saturation": "Saturation",
         "saturation4": "Sat",
         "save": "Save",
@@ -1217,6 +1258,8 @@
         "showHiddenFCPXMLImportOptions": "Show Hidden FCPXML Import Options",
         "showInspector": "Show Inspector",
         "showSectionHeadingsInMenubar": "Show Section Headings in Menubar",
+        "showTheAdvancedEqualizerUI": "Show the Advanced Equalizer UI",
+        "showTheAdvancedEqualizerUI9": "Show EQ",
         "showTimelineInViewers": "Show Timeline in Viewers",
         "showTitles": "Show Titles",
         "showTransitions": "Show Transitions",
@@ -1225,6 +1268,7 @@
         "silhouetteLuma": "Silhouette Luma",
         "silhouetteLuma9": "Sil Luma",
         "six": "6",
+        "sixtyHz": "60Hz",
         "skip": "Skip",
         "smoothCam": "SmoothCam",
         "softLight": "Soft Light",
@@ -1238,6 +1282,8 @@
         "stencilAlpha9": "Stencil A",
         "stencilLuma": "Stencil Luma",
         "stencilLuma9": "Stencil L",
+        "stereoLeftRight": "Stereo Left/Right",
+        "stereoLeftRight9": "Stereo",
         "stillFrames": "Still Frames",
         "stills": "Stills",
         "stop": "Stop",
@@ -1280,6 +1326,7 @@
         "toggle": "Toggle",
         "toggleAutomaticScriptReloading": "Auto Reload",
         "toggleColorCorrectionEffects": "Toggle Color Correction Effects",
+        "toggleControls": "Toggle Controls",
         "toggleEffects": "Toggle Effects",
         "toggleOverlaysWithCapsLock": "Toggle Overlays with Caps Lock",
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
@@ -1307,6 +1354,10 @@
         "transmitMMC": "Transmit MMC",
         "transmitMTC": "Transmit MTC",
         "trashPreferences": "Trash Preferences",
+        "trebleBoost": "Treble Boost",
+        "trebleBoost9": "Treble +",
+        "trebleReduce": "Treble Reduce",
+        "trebleReduce9": "Treble -",
         "trim": "Trim",
         "trimToPlayhead": "Trim To Playhead",
         "two": "2",
@@ -1353,6 +1404,8 @@
         "visitTangentWebsite": "Visit Tangent Website",
         "vividLight": "Vivid Light",
         "vividLight9": "VivLight",
+        "voiceEnhance": "Voice Enhance",
+        "voiceEnhance9": "Voice Enh",
         "volume": "Volume",
         "volume10": "Volume",
         "volume9": "Volume",
