--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -43,6 +43,7 @@
         "ambience": "Ambience",
         "ambience9": "Ambience",
         "amount": "Amount",
+        "amounts": "Amounts",
         "angle": "Angle",
         "angle3": "ANG",
         "angles": "Angles",
@@ -68,6 +69,7 @@
         "audio": "Audio",
         "audioAnalysis": "Audio Analysis",
         "audioEffect_group": "Audio Effect",
+        "audioEnhancements": "Audio Enhancements",
         "automatic": "Automatic",
         "automaticallyImport": "Automatically Import without Notification",
         "autoMountOnAC": "Mount external drives when switching to AC power",
@@ -918,6 +920,7 @@
         "menubarPanelTooltip": "Menubar Preferences",
         "menuChoiceSubText": "Menu: %{path}",
         "method": "Method",
+        "methods": "Methods",
         "midi": "MIDI",
         "midiBankDescription": "Changes the MIDI Control Bank",
         "midiColorBoardDescription": "Controls the Color Board via MIDI Controls",
@@ -944,6 +947,7 @@
         "mix": "Mix",
         "mix4": "Mix",
         "mode": "Mode",
+        "modes": "Modes",
         "modifier": "Modifier",
         "modifierKey": "Modifier Key",
         "monitor": "Monitor",
@@ -1363,6 +1367,7 @@
         "two": "2",
         "type": "Type",
         "typeDateAndTime_title": "Type Date & Time",
+        "types": "Types",
         "unassigned": "Unassigned",
         "undo": "Undo",
         "uninstall": "Uninstall",
