--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -68,6 +68,7 @@
         "attachScreenshot": "Attach a screenshot of all of your screens, taken just before this feedback form appeared.",
         "audio": "Audio",
         "audioAnalysis": "Audio Analysis",
+        "audioConfiguration": "Audio Configuration",
         "audioEffect_group": "Audio Effect",
         "audioEnhancements": "Audio Enhancements",
         "automatic": "Automatic",
