--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1292,6 +1292,7 @@
         "stillFrames": "Still Frames",
         "stills": "Stills",
         "stop": "Stop",
+        "subcomponents": "Subcomponents",
         "subtract": "Subtract",
         "subtract9": "Subtract",
         "success": "Success",
